--- a/angular-statistics/src/index.html
+++ b/angular-statistics/src/index.html
@@ -10,76 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,500,600,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    
-    <script type="text/javascript">
-        // Load google charts
-        google.charts.load('current', {'packages': ['corechart']});
-        google.charts.setOnLoadCallback(drawAgeDistributionChart);
-        google.charts.setOnLoadCallback(drawMovieDistributionChart);
-
-        // Draw the chart and set the chart values
-        function drawAgeDistributionChart() {
-            var data = google.visualization.arrayToDataTable([
-                ['Age', 'Number of People'],
-                ['under 7', 4260],
-                ['7-14', 3970],
-                ['14-18', 3454],
-                ['18+', 2390],
-            ]);
-
-            // Optional; add a title and set the width and height of the chart
-            var options = {
-                'title': 'Age Distribution', titleTextStyle: {fontSize: 15, fontName: 'Source Sans Pro', regular: true},
-                pieHole: 0.58, 'width': 400, 'height': 250,
-                colors: ['#55D9FD', '#FE8575', '#FFD983', '#A49DFF'], backgroundColor: '#FEFCFF',
-                legend: {
-                    position: 'right',
-                    alignment: 'center',
-                    textStyle: {fontSize: 11, fontName: 'Source Sans Pro', regular: true}
-                }, pieSliceText: 'none'
-            };
-            // Display the chart inside the <div> element with id="piechart"
-            var chart = new google.visualization.PieChart(document.getElementById('Age_chart_div'));
-            chart.draw(data, options);
-        }
-
-        // Draw the chart and set the chart values
-        function drawMovieDistributionChart() {
-            var data = google.visualization.arrayToDataTable([
-                ['Gender', 'Number of Movies'],
-                ['Action', 4260],
-                ['Comedy', 3970],
-                ['Drama', 3454],
-                ['Animation', 2390],
-            ]);
-
-            // Optional; add a title and set the width and height of the chart
-            var options = {
-                'title': 'Movie Distribution',
-                titleTextStyle: {fontSize: 15, fontName: 'Source Sans Pro', regular: true},
-                pieHole: 0.58,
-                'width': 400,
-                'height': 250,
-                colors: ['#55D9FD', '#FE8575', '#FFD983', '#A49DFF'],
-                backgroundColor: '#FEFCFF',
-                legend: {
-                    position: 'right',
-                    alignment: 'center',
-                    textStyle: {fontSize: 11, fontName: 'Source Sans Pro', regular: true}
-                },
-                pieSliceText: 'none'
-            };
-
-            // Display the chart inside the <div> element with id="piechart"
-            var chart = new google.visualization.PieChart(document.getElementById('Movie_chart_div'));
-            chart.draw(data, options);
-        }
-    </script>
     <title>MyCinema | Statistics</title>
 </head>
 <body>
 <app-root>
-        <div class="layout">
+       <!--- <div class="layout">
                 <div class="l-left">
                     <a href="#" class="toggle-menu topm1"><i class="material-icons">menu</i></a>
                     <a href="Home.html" class="logo-menu">My Cinema</a>
@@ -110,7 +45,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div>-->
 </app-root>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
